--- a/podcast.ipynb
+++ b/podcast.ipynb
@@ -367,6 +367,69 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['all'] = data['slug'] + ' ' + data['content']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['all'] = data['all'].apply(tokenizer.tokenize)\n",
+    "\n",
+    "data['all'] = data['all'].apply(lambda x: [word.lower() for word in x if word.lower() not in stops])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.drop(['slug', 'content'], axis = 1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "         category  rating                                                all\n",
+       "0            arts       5  [backstage, tilles, center, thanks, providing,...\n",
+       "1            arts       5  [backstage, tilles, center, thanks, providing,...\n",
+       "2           music       5  [backstage, tilles, center, thanks, providing,...\n",
+       "3            arts       5  [backstage, tilles, center, super, excited, se...\n",
+       "4            arts       5  [backstage, tilles, center, super, excited, se...\n",
+       "...           ...     ...                                                ...\n",
+       "1425160      kids       5  [world, stories, kids, made, guys, listen, pod...\n",
+       "1425161  business       5  [inbox, besties, w, kate, doster, email, marke...\n",
+       "1425162    comedy       1  [trypod, podcast, well, sit, us, podcast, turn...\n",
+       "1425163    comedy       1  [trypod, really, crappy, ep, 2, 4, guess, winn...\n",
+       "1425164   society       5  [root, evil, true, story, hodel, family, black...\n",
+       "\n",
+       "[1422197 rows x 3 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>category</th>\n      <th>rating</th>\n      <th>all</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>arts</td>\n      <td>5</td>\n      <td>[backstage, tilles, center, thanks, providing,...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>arts</td>\n      <td>5</td>\n      <td>[backstage, tilles, center, thanks, providing,...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>music</td>\n      <td>5</td>\n      <td>[backstage, tilles, center, thanks, providing,...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>arts</td>\n      <td>5</td>\n      <td>[backstage, tilles, center, super, excited, se...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>arts</td>\n      <td>5</td>\n      <td>[backstage, tilles, center, super, excited, se...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1425160</th>\n      <td>kids</td>\n      <td>5</td>\n      <td>[world, stories, kids, made, guys, listen, pod...</td>\n    </tr>\n    <tr>\n      <th>1425161</th>\n      <td>business</td>\n      <td>5</td>\n      <td>[inbox, besties, w, kate, doster, email, marke...</td>\n    </tr>\n    <tr>\n      <th>1425162</th>\n      <td>comedy</td>\n      <td>1</td>\n      <td>[trypod, podcast, well, sit, us, podcast, turn...</td>\n    </tr>\n    <tr>\n      <th>1425163</th>\n      <td>comedy</td>\n      <td>1</td>\n      <td>[trypod, really, crappy, ep, 2, 4, guess, winn...</td>\n    </tr>\n    <tr>\n      <th>1425164</th>\n      <td>society</td>\n      <td>5</td>\n      <td>[root, evil, true, story, hodel, family, black...</td>\n    </tr>\n  </tbody>\n</table>\n<p>1422197 rows × 3 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
@@ -376,7 +439,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 18
     }
    ],
    "source": [
@@ -385,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -401,13 +464,172 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 19
     }
    ],
    "source": [
     "############################ Visualize this ##############################\n",
     "\n",
     "data['rating'].value_counts()"
+   ]
+  },
+  {
+   "source": [
+    "# Functions"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count Vectorize or TF-IDF. Our first and most vital choice.\n",
+    "def CV(X_train, X_test):\n",
+    "    count_vectorizer = CountVectorizer()\n",
+    "    X_train_counts = count_vectorizer.fit_transform(X_train)\n",
+    "    X_test_counts = count_vectorizer.transform(X_test)\n",
+    "    return X_train_counts, X_test_counts\n",
+    "\n",
+    "def tf_idf(X_train, X_test):\n",
+    "    tfidf = TfidfVectorizer()\n",
+    "    X_train_counts = tfidf.fit_transform(X_train)\n",
+    "    X_test_counts = tfidf.transform(X_test)\n",
+    "    return X_test_counts, X_train_counts\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lemmatizing will or won't happen. Two functions, one nested inside the other.\n",
+    "def lemmatize_text(text):\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    return [lemmatizer.lemmatize(w) for w in text]\n",
+    "\n",
+    "def lemmatize():\n",
+    "    data['lemm'] = data['tokens'].apply(lemmatize_text)\n",
+    "    data['lemm'] = data['lemm'].apply(lambda x: ' '.join(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SMOTE either will or will not run.\n",
+    "def smote(X_train_counts, y_train):\n",
+    "    smote = SMOTE()\n",
+    "    X_train_counts, y_train = smote.fit_sample(X_train_counts, y_train)\n",
+    "    return X_train_counts, y_train\n",
+    "\n",
+    "# Train Test Split. The col variable is important and will be different depending on whether we lemmatize.\n",
+    "def TTS(col):\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(data[col], data['feelings'])\n",
+    "    return X_train, X_test, y_train, y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SMOTE either will or will not run.\n",
+    "def smote(X_train_counts, y_train):\n",
+    "    smote = SMOTE()\n",
+    "    X_train_counts, y_train = smote.fit_sample(X_train_counts, y_train)\n",
+    "    return X_train_counts, y_train\n",
+    "\n",
+    "# Train Test Split. The col variable is important and will be different depending on whether we lemmatize.\n",
+    "def TTS(col):\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(data[col], data['feelings'])\n",
+    "    return X_train, X_test, y_train, y_test"
+   ]
+  },
+  {
+   "source": [
+    "# Back to work"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                             podcast_id   itunes_id  \\\n",
+       "0      a00018b54eb342567c94dacfb2a3e504  1313466221   \n",
+       "1      a00043d34e734b09246d17dc5d56f63c   158973461   \n",
+       "2      a0004b1ef445af9dc84dad1e7821b1e3   139076942   \n",
+       "3      a00071f9aaae9ac725c3a586701abf4d  1332508972   \n",
+       "4      a000aa69852b276565c4f5eb9cdd999b  1342447811   \n",
+       "...                                 ...         ...   \n",
+       "46660  fffe3f208a56dfecfaf6d0a7f8399d63  1420703219   \n",
+       "46661  fffeb7d6d05f2b4c600fbebc828ca656  1220681898   \n",
+       "46662  ffff5db4b5db2d860c49749e5de8a36d   384521934   \n",
+       "46663  ffff66f98c1adfc8d0d6c41bb8facfd0  1435731839   \n",
+       "46664  ffff923482740bc21a0fe184865ec2e2  1271277212   \n",
+       "\n",
+       "                                        slug  \\\n",
+       "0                             scaling-global   \n",
+       "1      cornerstone-baptist-church-of-orlando   \n",
+       "2                mystery-dancing-in-the-dark   \n",
+       "3                          kts-money-matters   \n",
+       "4                            speedway-soccer   \n",
+       "...                                      ...   \n",
+       "46660        how-travel-writers-self-publish   \n",
+       "46661   teddy-the-empress-cooking-the-queens   \n",
+       "46662  frankenstein-or-the-modern-prometheus   \n",
+       "46663                     whos-bringing-wine   \n",
+       "46664                            tefl-waffle   \n",
+       "\n",
+       "                                              itunes_url  \\\n",
+       "0      https://podcasts.apple.com/us/podcast/scaling-...   \n",
+       "1      https://podcasts.apple.com/us/podcast/cornerst...   \n",
+       "2      https://podcasts.apple.com/us/podcast/mystery-...   \n",
+       "3      https://podcasts.apple.com/us/podcast/kts-mone...   \n",
+       "4      https://podcasts.apple.com/us/podcast/speedway...   \n",
+       "...                                                  ...   \n",
+       "46660  https://podcasts.apple.com/us/podcast/how-trav...   \n",
+       "46661  https://podcasts.apple.com/us/podcast/teddy-th...   \n",
+       "46662  https://podcasts.apple.com/us/podcast/frankens...   \n",
+       "46663  https://podcasts.apple.com/us/podcast/whos-bri...   \n",
+       "46664  https://podcasts.apple.com/us/podcast/tefl-waf...   \n",
+       "\n",
+       "                                          title  \n",
+       "0                                Scaling Global  \n",
+       "1         Cornerstone Baptist Church of Orlando  \n",
+       "2                  Mystery: Dancing in the Dark  \n",
+       "3                             KTs Money Matters  \n",
+       "4                               Speedway Soccer  \n",
+       "...                                         ...  \n",
+       "46660           How Travel Writers Self-Publish  \n",
+       "46661  TEDDY & THE EMPRESS:  Cooking the Queens  \n",
+       "46662    Frankenstein, or the Modern Prometheus  \n",
+       "46663                      Who’s Bringing Wine?  \n",
+       "46664                               TEFL Waffle  \n",
+       "\n",
+       "[46665 rows x 5 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>podcast_id</th>\n      <th>itunes_id</th>\n      <th>slug</th>\n      <th>itunes_url</th>\n      <th>title</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>a00018b54eb342567c94dacfb2a3e504</td>\n      <td>1313466221</td>\n      <td>scaling-global</td>\n      <td>https://podcasts.apple.com/us/podcast/scaling-...</td>\n      <td>Scaling Global</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>a00043d34e734b09246d17dc5d56f63c</td>\n      <td>158973461</td>\n      <td>cornerstone-baptist-church-of-orlando</td>\n      <td>https://podcasts.apple.com/us/podcast/cornerst...</td>\n      <td>Cornerstone Baptist Church of Orlando</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>a0004b1ef445af9dc84dad1e7821b1e3</td>\n      <td>139076942</td>\n      <td>mystery-dancing-in-the-dark</td>\n      <td>https://podcasts.apple.com/us/podcast/mystery-...</td>\n      <td>Mystery: Dancing in the Dark</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>a00071f9aaae9ac725c3a586701abf4d</td>\n      <td>1332508972</td>\n      <td>kts-money-matters</td>\n      <td>https://podcasts.apple.com/us/podcast/kts-mone...</td>\n      <td>KTs Money Matters</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>a000aa69852b276565c4f5eb9cdd999b</td>\n      <td>1342447811</td>\n      <td>speedway-soccer</td>\n      <td>https://podcasts.apple.com/us/podcast/speedway...</td>\n      <td>Speedway Soccer</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>46660</th>\n      <td>fffe3f208a56dfecfaf6d0a7f8399d63</td>\n      <td>1420703219</td>\n      <td>how-travel-writers-self-publish</td>\n      <td>https://podcasts.apple.com/us/podcast/how-trav...</td>\n      <td>How Travel Writers Self-Publish</td>\n    </tr>\n    <tr>\n      <th>46661</th>\n      <td>fffeb7d6d05f2b4c600fbebc828ca656</td>\n      <td>1220681898</td>\n      <td>teddy-the-empress-cooking-the-queens</td>\n      <td>https://podcasts.apple.com/us/podcast/teddy-th...</td>\n      <td>TEDDY &amp; THE EMPRESS:  Cooking the Queens</td>\n    </tr>\n    <tr>\n      <th>46662</th>\n      <td>ffff5db4b5db2d860c49749e5de8a36d</td>\n      <td>384521934</td>\n      <td>frankenstein-or-the-modern-prometheus</td>\n      <td>https://podcasts.apple.com/us/podcast/frankens...</td>\n      <td>Frankenstein, or the Modern Prometheus</td>\n    </tr>\n    <tr>\n      <th>46663</th>\n      <td>ffff66f98c1adfc8d0d6c41bb8facfd0</td>\n      <td>1435731839</td>\n      <td>whos-bringing-wine</td>\n      <td>https://podcasts.apple.com/us/podcast/whos-bri...</td>\n      <td>Who’s Bringing Wine?</td>\n    </tr>\n    <tr>\n      <th>46664</th>\n      <td>ffff923482740bc21a0fe184865ec2e2</td>\n      <td>1271277212</td>\n      <td>tefl-waffle</td>\n      <td>https://podcasts.apple.com/us/podcast/tefl-waf...</td>\n      <td>TEFL Waffle</td>\n    </tr>\n  </tbody>\n</table>\n<p>46665 rows × 5 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "podcast"
    ]
   },
   {
